changes and merge the model modelling and the column modelling
